tests/fail/07-sealed-function.stderr
error[E0425]: cannot find value `Token` in this scope
  --> tests/fail/07-sealed-function.rs:27:17
   |
27 |     inner::A::a(Token);
   |                 ^^^^^ not found in this scope
   |
help: consider importing this unit struct
   |
23 | use crate::inner::__seal_partial_sealed::Token;
   |

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> tests/fail/07-sealed-function.rs:26:5
   |
26 |     inner::A::a();
   |     ^^^^^^^^^^^-- supplied 0 arguments
   |     |
   |     expected 1 argument
   |
note: associated function defined here
  --> tests/fail/07-sealed-function.rs:7:12
   |
7  |         fn a();
   |            ^
